# pikabot

./: .gitignore  Cargo.toml  README.md  build_and_upload.sh
.cargo/: config.toml
src/: groups.rs  main.rs
