[package]
name = "pikabot"
version = "0.1.0"
authors = ["Rasmus Henriksson <rasmus@boxdragon.se>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
serenity = { version = "0.11.7", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
