[package]
name = "pikabot"
version = "0.1.0"
authors = ["Rasmus Henriksson <rasmus@henriksson.nu>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.92"
once_cell = "1.20"
poise = { version = "0.6", features = ["cache"] }
tokio = { version = "1.41", default-features = false, features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
time = { git = "https://github.com/time-rs/time.git", tag = "v0.3.36" }
